[gd_scene load_steps=30 format=3 uid="uid://d11lim1u2e24i"]

[ext_resource type="Script" uid="uid://djkeiiqn5hebi" path="res://gameplay-scene/game-logic.gd" id="1_n2enm"]
[ext_resource type="FontFile" uid="uid://cpwm7d3lrhrkk" path="res://assets/PixelifySans-Regular.ttf" id="2_dl2ym"]
[ext_resource type="FontFile" uid="uid://ddmd7pp0hamna" path="res://assets/PublicPixel.ttf" id="2_sviuc"]
[ext_resource type="Texture2D" uid="uid://bqs4nqlic75wl" path="res://assets/images/health2.png" id="4_fqy1j"]
[ext_resource type="Texture2D" uid="uid://dgkkv5vuo3qsu" path="res://assets/images/health1.png" id="5_lva1i"]
[ext_resource type="Texture2D" uid="uid://cfprb7wikjy48" path="res://assets/images/player/BlackoutGuy.png" id="7_387hk"]
[ext_resource type="AudioStream" uid="uid://ynf10b40e557" path="res://assets/sounds/button.ogg" id="8_m3mv0"]
[ext_resource type="AudioStream" uid="uid://blgblgl1uw2ev" path="res://assets/sounds/chips1.ogg" id="9_bwecg"]
[ext_resource type="AudioStream" uid="uid://cqonduscxpg0i" path="res://assets/sounds/card.ogg" id="10_lva1i"]
[ext_resource type="AudioStream" uid="uid://c8jdga4ilhd4g" path="res://assets/sounds/holo1.ogg" id="11_vflar"]
[ext_resource type="AudioStream" uid="uid://dybxsjkwjgf2j" path="res://assets/sounds/negative.ogg" id="12_vflar"]
[ext_resource type="AudioStream" uid="uid://c6pfwv03lb5jm" path="res://assets/sounds/voice1.ogg" id="13_21bi7"]
[ext_resource type="AudioStream" uid="uid://8n2dn7wrboa5" path="res://assets/sounds/voice2.ogg" id="14_0om1j"]
[ext_resource type="AudioStream" uid="uid://cpcfhyppfuevx" path="res://assets/sounds/voice3.ogg" id="15_fymoh"]

[sub_resource type="Animation" id="Animation_387hk"]
resource_name = "BlackJackAnimationD"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DealerBlackJack:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(648, 432), Vector2(648, 532)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DealerBlackJack:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.172549, 0.12549, 1), Color(1, 0.172549, 0.12549, 0)]
}

[sub_resource type="Animation" id="Animation_mnx84"]
resource_name = "angry"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_qj5j0"]
resource_name = "BustAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerBustMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.566667, 0.733333),
"transitions": PackedFloat32Array(2.63902, 0.353553, 1.8025, 3.73213),
"update": 0,
"values": [Vector2(92, 680), Vector2(92, 750), Vector2(92, 730), Vector2(92, 750)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerBustMarker:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.2, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 0.965936),
"update": 0,
"values": [Color(0.891291, 4.17233e-06, 8.64267e-07, 0), Color(1, 0.174173, 0.127215, 1), Color(1, 0.174173, 0.127215, 1), Color(0.891291, 4.18738e-06, 8.66354e-07, 0)]
}

[sub_resource type="Animation" id="Animation_1h22c"]
resource_name = "HitAnimationD"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DealerHitMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(91, 100), Vector2(91, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DealerHitMarker:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.490196, 1, 0.454902, 1), Color(0.490196, 1, 0.454902, 0)]
}

[sub_resource type="Animation" id="Animation_4r27c"]
resource_name = "HitAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerHitMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(110, 750), Vector2(110, 650)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerHitMarker:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.490196, 1, 0.454902, 1), Color(0.490196, 1, 0.454902, 0)]
}

[sub_resource type="Animation" id="Animation_1jfn3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerBustMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(92, 901)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerBustMarker:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.490196, 1, 0.454902, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBlackJack:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(648, 532)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6250x"]
_data = {
&"BlackJackAnimationD": SubResource("Animation_387hk"),
&"BlackJackAnimationP": SubResource("Animation_mnx84"),
&"BustAnimation": SubResource("Animation_qj5j0"),
&"HitAnimationD": SubResource("Animation_1h22c"),
&"HitAnimationP": SubResource("Animation_4r27c"),
&"RESET": SubResource("Animation_1jfn3")
}

[sub_resource type="Animation" id="Animation_bwecg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k58ic"]
resource_name = "blackout"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_vflar"]
resource_name = "drunk"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_lva1i"]
resource_name = "hiccup"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_m3mv0"]
resource_name = "sober"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_fqy1j"]
resource_name = "tipsy"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mnx84"]
_data = {
&"RESET": SubResource("Animation_bwecg"),
&"angry": SubResource("Animation_mnx84"),
&"blackout": SubResource("Animation_k58ic"),
&"drunk": SubResource("Animation_vflar"),
&"hiccup": SubResource("Animation_lva1i"),
&"sober": SubResource("Animation_m3mv0"),
&"tipsy": SubResource("Animation_fqy1j")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_21bi7"]
random_pitch = 1.3
streams_count = 3
stream_0/stream = ExtResource("13_21bi7")
stream_1/stream = ExtResource("14_0om1j")
stream_2/stream = ExtResource("15_fymoh")

[node name="Gameplay" type="Control" groups=["Bouttons"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n2enm")

[node name="Debug" type="Label" parent="."]
layout_mode = 2
offset_left = 1191.0
offset_top = 557.0
offset_right = 1393.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(0.490196, 1, 0.454902, 1)
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 82
text = "Bet :"

[node name="Buttons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8625
anchor_top = 0.259259
anchor_right = 0.985937
anchor_bottom = 0.507407
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
layout_mode = 2
theme_override_constants/separation = 13
alignment = 2

[node name="Hit" type="Button" parent="Buttons/VBoxContainer" groups=["Bouttons"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 25
text = "HIT"

[node name="Stand" type="Button" parent="Buttons/VBoxContainer" groups=["Bouttons"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 25
text = "STAND"

[node name="OptimalMove" type="Button" parent="Buttons/VBoxContainer" groups=["Bouttons"]]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 25
text = "OPTIMAL

MOVE
"

[node name="Cards" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.145
anchor_right = 0.843
anchor_bottom = 0.98
offset_left = -0.400024
offset_top = -2.0
offset_right = 1383.44
offset_bottom = 1109.6
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/margin_top = 45
theme_override_constants/margin_bottom = 45

[node name="Hands" type="VBoxContainer" parent="Cards"]
layout_mode = 2
theme_override_constants/separation = 630
alignment = 2

[node name="DealerHand" type="HBoxContainer" parent="Cards/Hands"]
layout_mode = 2
alignment = 1

[node name="PlayerHand" type="HBoxContainer" parent="Cards/Hands"]
layout_mode = 2
alignment = 1

[node name="DealerScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -127.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 42
horizontal_alignment = 1

[node name="PlayerScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 79.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 42
horizontal_alignment = 1

[node name="NumberBar" type="ColorRect" parent="."]
show_behind_parent = true
light_mask = 512
visibility_layer = 512
layout_mode = 0
offset_left = 889.0
offset_top = -27.0
offset_right = 1031.0
offset_bottom = 1100.0
mouse_filter = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[node name="NumberBar2" type="ColorRect" parent="."]
show_behind_parent = true
light_mask = 512
visibility_layer = 512
layout_mode = 0
offset_left = 848.0
offset_top = 491.0
offset_right = 1083.0
offset_bottom = 587.0
mouse_filter = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="RightMenuBar" type="ColorRect" parent="."]
show_behind_parent = true
light_mask = 512
visibility_layer = 512
layout_mode = 0
offset_left = 1630.0
offset_top = -30.0
offset_right = 1953.0
offset_bottom = 1106.0
mouse_filter = 2
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="PlayerHitMarker" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.083
anchor_bottom = 0.151
offset_left = 110.0
offset_top = 650.0
offset_right = 88.64
offset_bottom = 566.92
theme_override_colors/font_color = Color(0.490196, 1, 0.454902, 0)
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 80
text = "hit!"

[node name="PlayerBlackJack" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.083
anchor_bottom = 0.151
offset_left = 648.0
offset_top = 532.0
offset_right = 1115.64
offset_bottom = 430.92
theme_override_colors/font_color = Color(0.490196, 1, 0.454902, 0)
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 57
text = "BlackJack !"

[node name="DealerBlackJack" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.083
anchor_bottom = 0.151
offset_left = 648.0
offset_top = 532.0
offset_right = 1229.64
offset_bottom = 430.92
theme_override_colors/font_color = Color(1, 0.172549, 0.12549, 0)
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 57
text = "BlackJack..."

[node name="DealerHitMarker" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.083
anchor_bottom = 0.151
offset_left = 91.0
offset_top = 100.0
offset_right = 69.64
offset_bottom = 16.921
theme_override_colors/font_color = Color(0.490196, 1, 0.454902, 1)
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 80
text = "hit!"

[node name="PlayerBustMarker" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.083
anchor_bottom = 0.151
offset_left = 92.0
offset_top = 901.0
offset_right = 144.64
offset_bottom = 817.92
theme_override_colors/font_color = Color(0.490196, 1, 0.454902, 1)
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 80
text = "Bust!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6250x")
}

[node name="WhoseTurn" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1662.0
offset_top = -477.0
offset_bottom = -390.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 41
text = "Player's
Turn"

[node name="Exit" type="Button" parent="."]
layout_mode = 2
offset_left = 1656.0
offset_top = 951.0
offset_right = 1893.0
offset_bottom = 1058.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.556863, 0.494118, 1)
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 25
text = "EXIT"

[node name="DrunkLevel" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 7.0
offset_right = 96.0
offset_bottom = 23.0
scale = Vector2(10, 4)
max_value = 8.0
texture_under = ExtResource("4_fqy1j")
texture_over = ExtResource("5_lva1i")
texture_progress = ExtResource("4_fqy1j")
tint_progress = Color(0, 0.141187, 0.999999, 1)

[node name="PatienceLevel" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 54.0
offset_right = 96.0
offset_bottom = 70.0
scale = Vector2(10, 4)
max_value = 6.0
texture_under = ExtResource("4_fqy1j")
texture_over = ExtResource("5_lva1i")
texture_progress = ExtResource("4_fqy1j")
tint_progress = Color(0.877346, 3.87453e-06, 1.2514e-06, 1)

[node name="DollarsInt" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.083
anchor_bottom = 0.151
offset_left = 1063.0
offset_top = 732.0
offset_right = 1016.64
offset_bottom = 648.92
theme_override_colors/font_color = Color(0.490196, 1, 0.454902, 1)
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1

[node name="AllBet" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1663.0
offset_top = 574.0
offset_right = 1865.0
offset_bottom = 815.0
theme_override_constants/separation = 5

[node name="Bet" type="Label" parent="AllBet"]
layout_mode = 2
theme_override_colors/font_color = Color(0.490196, 1, 0.454902, 1)
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 82
text = "Bet :"

[node name="one_dollars" type="Button" parent="AllBet" groups=["Bouttons"]]
layout_mode = 2
theme_override_constants/h_separation = 9
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 40
text = "1$"

[node name="ten_dollars" type="Button" parent="AllBet" groups=["Bouttons"]]
layout_mode = 2
theme_override_constants/h_separation = 9
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 40
text = "10$"

[node name="fifty_dollars" type="Button" parent="AllBet" groups=["Bouttons"]]
layout_mode = 2
theme_override_constants/h_separation = 9
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 40
text = "50$"

[node name="BetButton" type="Button" parent="." groups=["Bouttons"]]
layout_mode = 0
offset_left = 1669.0
offset_top = 838.0
offset_right = 1861.0
offset_bottom = 915.0
theme_override_constants/h_separation = 9
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 45
text = "Bet"

[node name="Chips" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Chips1stack" type="VBoxContainer" parent="Chips"]
clip_children = 1
layout_mode = 0
offset_left = 254.0
offset_top = 720.0
offset_right = 366.0
offset_bottom = 832.0
theme_override_constants/separation = -121

[node name="Chips10stack" type="VBoxContainer" parent="Chips"]
clip_children = 1
layout_mode = 0
offset_left = 135.0
offset_top = 645.0
offset_right = 247.0
offset_bottom = 755.0
theme_override_constants/separation = -121

[node name="Chips100stack" type="VBoxContainer" parent="Chips"]
clip_children = 1
layout_mode = 0
offset_left = 15.0
offset_top = 713.0
offset_right = 127.0
offset_bottom = 826.0
theme_override_constants/separation = -121

[node name="Chips1stackBet" type="VBoxContainer" parent="Chips"]
clip_children = 1
layout_mode = 0
offset_left = 1472.0
offset_top = 735.0
offset_right = 1584.0
offset_bottom = 847.0
theme_override_constants/separation = -121

[node name="Chips10stackBet" type="VBoxContainer" parent="Chips"]
clip_children = 1
layout_mode = 0
offset_left = 1353.0
offset_top = 660.0
offset_right = 1465.0
offset_bottom = 770.0
theme_override_constants/separation = -121

[node name="Chips100stackBet" type="VBoxContainer" parent="Chips"]
clip_children = 1
layout_mode = 0
offset_left = 1233.0
offset_top = 728.0
offset_right = 1345.0
offset_bottom = 841.0
theme_override_constants/separation = -121

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(132, 943)
scale = Vector2(8.00469, 8.00469)
texture = ExtResource("7_387hk")
flip_h = true
hframes = 8
vframes = 5

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Sprite2D"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_mnx84")
}

[node name="SFX" type="Node2D" parent="."]

[node name="Bouton" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("8_m3mv0")
bus = &"Sfx"

[node name="Chips" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("9_bwecg")
bus = &"Sfx"

[node name="Card" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("10_lva1i")
bus = &"Sfx"

[node name="Win" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("11_vflar")
volume_db = -5.0
bus = &"Sfx"

[node name="Lose" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("12_vflar")
volume_db = -5.0
bus = &"Sfx"

[node name="Voice" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("13_21bi7")
volume_db = -5.0
bus = &"Sfx"
parameters/looping = true

[node name="Voice2" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("14_0om1j")
volume_db = -5.0
bus = &"Sfx"
parameters/looping = true

[node name="Voice3" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("15_fymoh")
volume_db = -5.0
bus = &"Sfx"
parameters/looping = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_21bi7")

[connection signal="pressed" from="Buttons/VBoxContainer/Hit" to="." method="_on_hit_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Stand" to="." method="_on_stand_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/OptimalMove" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="AllBet/one_dollars" to="." method="_on_bet_dollars_pressed" binds= [1]]
[connection signal="pressed" from="AllBet/ten_dollars" to="." method="_on_bet_dollars_pressed" binds= [10]]
[connection signal="pressed" from="AllBet/fifty_dollars" to="." method="_on_bet_dollars_pressed" binds= [50]]
[connection signal="pressed" from="BetButton" to="." method="_on_bet_button_pressed"]
